syntax = "proto3";

package auth;

option go_package = "snercheg.sso.v1;ssov1";

service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc isAdmin(IsAdminRequest) returns (IsAdminResponse);
}

message RegisterRequest {
  string email = 1; // Email of the user to register.
  string username = 2; // Username of the user to register.
  string password = 3; // Password of the user to register.
}
message RegisterResponse {
  int64 user_id = 1; // User ID of the user that was registered.
}
message LoginRequest {
  string email = 1; // Email of the user to login.
  string username = 2; // Username of the user to login.
  string password = 3; // Password of the user to login.
  int32 app_id = 4; // ID of the app to login.
}
message LoginResponse {
  string token = 1; // Token of the user that was logged in.
}
message LogoutRequest {
  int64 user_id = 1; // User ID of the user
}
message LogoutResponse {
  string token = 1; // Token of the user that was logged out.
}
message IsAdminRequest {
  int64 user_id = 1; // User ID of the user to check.
}
message IsAdminResponse {
  bool is_admin = 1; // Whether the user is an admin or not.
}